# chinese-helper

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: cli.rs  glue.rs  main.rs  models.rs  network.rs  status_code.rs  utils.rs
src/models/: idiom.rs  mod.rs
